# OE

./: .gitignore
zad1/zad1/: Extensions.cs  FunctionMinimumFitness.cs  zad1.sln
zad1/zad1/EventHandlers/: AdaptiveStrategyEventHandler.cs  IEventHandler.cs
zad1/zad1/ParameterSelection/: ParameterSelection.cs
zad1/zad1/f1/sga uniformcrossover/: plotter.py  results_SGA_EliteSelection_UniformCrossover_ReverseSequenceMutation_FitnessStagnationTermination0.csv  results_SGA_EliteSelection_UniformCrossover_ReverseSequenceMutation_FitnessStagnationTermination1.csv  results_SGA_EliteSelection_UniformCrossover_ReverseSequenceMutation_FitnessStagnationTermination2.csv  results_SGA_EliteSelection_UniformCrossover_ReverseSequenceMutation_FitnessStagnationTermination4.csv  (+2 more)
zad1/zad1/zad1/: CustomUniformMutation.cs  Extensions.cs  FunctionMinimumFitness.cs  Program.cs  zad1.csproj
zad1/zad1/zad1/EventHandlers/: AdaptiveStrategyEventHandler.cs  IEventHandler.cs  (+2 more)
zad2/: argument_parser.py  main.py  recorder.py  utils.py
zad2/plots/: exp.ods
zad3/: CMakeLists.txt  conanfile.txt  dataset_preprocessing.py  main.cpp  zad3.cpp  zad3.h
zad3/include/: chromosome.hpp  cluster.hpp  clusterer.hpp  creature.hpp  point.hpp  utils.hpp
zad3/include/fitness/: complexFitness.hpp  davesBouldin.hpp  dunnIndex.hpp  fitness.hpp  silhouette.hpp  weightedFitness.hpp
zad3/resources/: cats-data.csv  credit_card_pca.csv
zad3/src/: chromosome.cpp  cluster.cpp  clusterer.cpp  creature.cpp  point.cpp  utils.cpp
zad3/src/fitness/: complexFitness.cpp  davesBouldin.cpp  dunnIndex.cpp  fitness.cpp  silhouette.cpp  weightedFitness.cpp
(+37 files in other folders)
