# CMakeList.txt: projekt CMake dla elementu zad3, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

project ("zad3")

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (zad3 "zad3.cpp" "zad3.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
